# streamlit-hotkeys

./: README.md  pyproject.toml  setup.py
examples/: 01_basic_hotkeys.py  02_command_palette.py  03_hold_to_spam.py  03_hotkeys_prevent_default_and_navigation.py
examples/02_multipage/: app.py  hotkeys_config.py
examples/02_multipage/pages/: 01_Editor.py  02_Viewer.py
streamlit_hotkeys/: __init__.py  frontend.py  manager.py
streamlit_hotkeys/component/: index.html  index.js
